# UmbraLog

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/pch/: log-pch.h
include/umbra/: log.h  logger.h
include/umbra/common/: clock-sync.h
src/: log.cpp  logger.cpp
test/: test_main.cpp
